{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 95,
  "lineage": "17fddf8d-6f71-448a-e2f3-93227733fc18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0580849e684d82074",
            "arn": "arn:aws:ec2:us-east-1:975049923571:elastic-ip/eipalloc-0580849e684d82074",
            "domain": "vpc",
            "id": "eipalloc-0580849e684d82074",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-242-174-140.compute-1.amazonaws.com",
            "public_ip": "54.242.174.140",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-natgw-eip"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-natgw-eip",
              "Owner": "gaston",
              "Project": "ecs-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:internet-gateway/igw-0ab86faec372cdc6b",
            "id": "igw-0ab86faec372cdc6b",
            "owner_id": "975049923571",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-igw"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-igw",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0580849e684d82074",
            "association_id": "eipassoc-078ea56bcb9e39faf",
            "connectivity_type": "public",
            "id": "nat-06f27c009ebdeec0d",
            "network_interface_id": "eni-0f3b146557a9b1a70",
            "private_ip": "192.168.10.95",
            "public_ip": "54.242.174.140",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0377936ad8f496b56",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-natgw"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-natgw",
              "Owner": "gaston",
              "Project": "ecs-network"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv1_nat_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056a8d4b89fe1407b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06f27c009ebdeec0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-056a8d4b89fe1407b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-056a8d4b89fe1407b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.priv1",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv2_nat_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01196e22c8b5b42b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06f27c009ebdeec0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01196e22c8b5b42b5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01196e22c8b5b42b5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.priv2",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab86faec372cdc6b",
            "id": "r-rtb-0a936c34484a1643a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a936c34484a1643a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a936c34484a1643a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:route-table/rtb-056a8d4b89fe1407b",
            "id": "rtb-056a8d4b89fe1407b",
            "owner_id": "975049923571",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-rt-priv1"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-rt-priv1",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "rtb-056a8d4b89fe1407b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:route-table/rtb-01196e22c8b5b42b5",
            "id": "rtb-01196e22c8b5b42b5",
            "owner_id": "975049923571",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-rt-priv2"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-rt-priv2",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "rtb-01196e22c8b5b42b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:route-table/rtb-0a936c34484a1643a",
            "id": "rtb-0a936c34484a1643a",
            "owner_id": "975049923571",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-rt-pub"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-rt-pub",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "rtb-0a936c34484a1643a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c92eaecebff4b68",
            "region": "us-east-1",
            "route_table_id": "rtb-056a8d4b89fe1407b",
            "subnet_id": "subnet-090ada0695f78c564"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.priv1",
            "aws_subnet.priv1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e74ec61af66bf7b",
            "region": "us-east-1",
            "route_table_id": "rtb-01196e22c8b5b42b5",
            "subnet_id": "subnet-0635812adcc3c861d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.priv2",
            "aws_subnet.priv2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd6f5335201f07cc",
            "region": "us-east-1",
            "route_table_id": "rtb-0a936c34484a1643a",
            "subnet_id": "subnet-0377936ad8f496b56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0440473d0673997de",
            "region": "us-east-1",
            "route_table_id": "rtb-0a936c34484a1643a",
            "subnet_id": "subnet-07948f3e49773093f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pub2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-090ada0695f78c564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ada0695f78c564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-priv1",
              "Tier": "private"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-priv1",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-090ada0695f78c564",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-0635812adcc3c861d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0635812adcc3c861d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-priv2",
              "Tier": "private"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-priv2",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-0635812adcc3c861d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-0377936ad8f496b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0377936ad8f496b56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-pub1",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-pub1",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-0377936ad8f496b56",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-07948f3e49773093f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07948f3e49773093f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-pub2",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-pub2",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a7ea9a27138e8199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-07948f3e49773093f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:vpc/vpc-0a7ea9a27138e8199",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ede94539c6b2b1c3",
            "default_route_table_id": "rtb-0c1f8b654bd421910",
            "default_security_group_id": "sg-036086f9fe66875f6",
            "dhcp_options_id": "dopt-036ce88bfee028b3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7ea9a27138e8199",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1f8b654bd421910",
            "owner_id": "975049923571",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecsnewv2-vpc"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecsnewv2-vpc",
              "Owner": "gaston",
              "Project": "ecs-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}